tests/sksl/errors/DuplicateSymbol.dsl.glsl
### Compilation failed:

error: symbol 'x' was already defined

error: symbol 'main' was already defined

2 errors
